--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,8 +7,8 @@
 <string name="confirm_password">Confirm password</string>
 <string name="already_registed">Already registered?</string>
 <string name="login">Login</string>
-<string name="forget_password">Forget your password?</string>
-<string name="forget_password_lable">Forget password</string>
+<string name="forgot_password">Forgot your password?</string>
+<string name="forgot_password_lable">Forgot password</string>
 <string name="create_new_password">Create new password</string>
 <string name="profile">Profile</string>
 <string name="first_name">First name...</string>
@@ -40,6 +40,8 @@
 <string name="by_level">By Level</string>
 <string name="by_location">By Location</string>
 <string name="searching">Searching...</string>
+<string name="loading_profile">Loading profile...</string>
+<string name="update">Update</string>
 
 
 <string name="please_enter_email">Please enter email</string>
