--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="confirm_password">Confirm password</string>
     <string name="already_registed">Already registered?</string>
     <string name="login">Login</string>
-    <string name="forget_password">Forget your password?</string>
-    <string name="forget_password_lable">Forget password</string>
+    <string name="forgot_password">Forgot your password?</string>
+    <string name="forgot_password_lable">Forgot password</string>
     <string name="create_new_password">Create new password</string>
     <string name="profile">Profile</string>
     <string name="first_name">First name...</string>
@@ -59,7 +59,8 @@
     <string name="please_enter_name">Please enter name</string>
     <string name="not_picked_image">You haven`t picked image</string>
     <string name="searching">Searching...</string>
-
+    <string name="loading_profile">Loading profile...</string>
+    <string name="update">Update</string>
 
 
     <string-array name="level_array">
